--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,7 @@ h6{
 #navigation{
     margin: 0; 
     padding: 10px;
+    /* padding-right: 1000px; */
 }
 #navigation li{
     display: inline-block;
@@ -194,7 +195,6 @@ h6{
     background-color: var(--previewbg);
     padding: 15px;
     position: relative;
-
 }
 .corner{
     width: 7px;
@@ -284,7 +284,15 @@ h6{
      
     }  
 }
-@media screen and (max-width:800px){
+@media screen and (max-width:700px){
+.nav-wrapper{
+    max-width:100%;
+}
+#profile-pic{
+    height:180px ;
+    width: 180px;
+    /* margin-left: 45px; */
+}
 .intro-wrapper{
     grid-template-columns: 1fr ;    
     grid-template-areas: 
@@ -293,7 +301,28 @@ h6{
     "right-column"
     ;
 }
+.left-column{
+    padding-right: 10px;
+}
 .right-column{
     justify-content: center;
 }
+#preview-shadow{
+    width: 220px;
+    height: 173px;
+    padding-left: 20px;    
+    padding-top: 30px;
+    padding-bottom: 1px;
+}
+#preview{
+    width: 210px;
+    height:180px;
+    border: 1.5px solid #17a2b8;
+    background-color: var(--previewbg);
+    padding: 8px;
+    padding-left: 11px;
+    padding-right: 9px;
+    position: relative;
+}
+
 }
